--- a/home.htm
+++ b/home.htm
@@ -7,6 +7,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    New file
+    <div>
+        <li>Adding new feature1 </li>
+    </div>
 </body>
 </html>
