--- a/home.htm
+++ b/home.htm
@@ -10,5 +10,8 @@
     <div>
         <li>Adding new feature1 </li>
     </div>
+    <div>
+        <li>Adding new feature2</li>
+    </div>
 </body>
 </html>
