--- a/home.htm
+++ b/home.htm
@@ -13,5 +13,8 @@
     <div>
         <li>Adding new feature2</li>
     </div>
+    <div>
+        <li>Adding brand new feature3</li>
+    </div>
 </body>
 </html>
