trying out how to create a branch from exisitng.

--- a/home.htm
+++ b/home.htm
@@ -13,5 +13,8 @@
     <div>
         <li>Adding new feature2</li>
     </div>
+    <div>
+        <li>just added new feature</li>
+    </div>
 </body>
 </html>
